Feature: get some real data with ActiveModelAdapter

--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "test": "ember test"
   },
   "devDependencies": {
-    "babel-eslint": "^8.0.2",
     "@ember/optional-features": "^0.7.0",
     "@glimmer/component": "^0.14.0-alpha.3",
+    "active-model-adapter": "^2.2.0",
+    "babel-eslint": "^8.0.2",
     "broccoli-asset-rev": "^3.0.0",
     "ember-auto-import": "^1.2.20",
     "ember-cli": "github:ember-cli/ember-cli#1c7e84c9449da31b0babe0e2e5df26c7570ce620",
